<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/collectitbg"
    tools:context="com.example.jessiebear.collectitapplication.add_data">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ccFFffff"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="37dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="43dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="43dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewData"
        android:text="◀ Back"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewMap"
        android:text="View Map"
        app:layout_constraintRight_toLeftOf="@+id/button14"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addData"
        android:text="Add Data"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        app:layout_constraintBaseline_toBaselineOf="@+id/button13"
        tools:layout_constraintBaseline_creator="1" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:text="@string/sampledata"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="dp"
        android:text="@string/sampledata2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="58dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        android:layout_marginEnd="58dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:text="@string/sampledata3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:text="@string/sampledata4"
        tools:layout_editor_absoluteY="206dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:text="@string/sampledata5"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:text="@string/sampledata6"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView20" />


</android.support.constraint.ConstraintLayout>
